--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Servicios</a>
+            <a class="nav-link js-scroll-trigger" href="#services">servi</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Platillos</a>
+            <a class="nav-link js-scroll-trigger" href="#portfolio">Comida</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">Nosotros</a>
+            <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#team"Gerentes</a>
+            <a class="nav-link js-scroll-trigger" href="#team"Dueños</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contactos</a>
