--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#team"Dueños</a>
+            <a class="nav-link js-scroll-trigger" href="#team"Jefes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contactos</a>
+            <a class="nav-link js-scroll-trigger" href="#contact">Contac</a>
           </li>
         </ul>
       </div>
